[package]
name = "rolex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = "0.23.2"
console = "0.15.0"
dialoguer = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

